[package]
name = "gb-emulator"
description = "An original Game Boy (DMG) emulator"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
gb_core = {path = "core"}

[workspace]
members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/spinspark/gb-emulator"
categories = ["emulators"]
keywords = ["gb", "dmg"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_lossless = "allow"
module_name_repetitions = "allow"
option_if_let_else = "allow"
verbose_bit_mask = "allow"
